<resources>
    <string name="app_name">性理扶阳</string>
    <string name="title">今天你吃五毒丸了吗？</string>
    <string name="fight">若想好病，需自责罚。\n疏导阴气，拨阴取阳。\n\n抽: </string>
    <string name="five">五毒丸</string>
    <string name="five_summary">五毒丸/忏悔</string>
    <string name="repent">忏悔录</string>
    <string name="date">日期</string>
    <string name="count">次数</string>
    <string name="setting">设置</string>
    <string name="ver">版本</string>
    <string name="clean">清零</string>
    <string name="clean_ask">请问是否要清除今日的五毒记录?</string>
    <string name="clean_end">今日清零完毕</string>
    <string name="last">忏悔录条数</string>
    <string name="last_summary">显示最近的天数,默认5天</string>
    <string name="play">惩戒基数</string>
    <string name="play_summary">犯1次错，自行责罚的次数，默认10次</string>
    <string name="sound_summary">声音播放状态</string>
    <string name="sound_title">音效</string>
    <string name="sound_on">打开</string>
    <string name="sound_off">静音</string>
    <string name="zhi">志纲/立志向</string>
    <string name="zhi_summary">学道在乎立志</string>
    <string name="add">增加</string>
    <string name="del">删除</string>
    <string name="input">请输入志向</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="del_click">点击删除记录</string>
    <string name="del_ask">是否确认删除当前记录?</string>
    <string name="yi">义纲/找好处</string>
    <string name="yi_summary">找好处\n你生人气，拿出来消气\n人生你气，拿出来宣扬</string>
    <string name="googMan">善人</string>
    <string name="inputName">请输入善人姓名</string>
    <string name="inputGood">请输入善行</string>
    <string name="threeType">三界</string>
    <string name="fiveType">五行</string>
    <string name="extFiveType">五行扩展</string>
    <string name="fourType">四大界</string>
    <string name="game">五行问答</string>
    <string name="game_ext">五行扩展问答</string>
    <string name="top">最高记录</string>
    <string name="top_summary">得分最高的十条记录</string>
    <string name="mu">木</string>
    <string name="huo">火</string>
    <string name="tu">土</string>
    <string name="jin">金</string>
    <string name="shui">水</string>
    <string name="pass">过</string>
    <string name="end">20题得分:</string>
    <string name="sex">生理宝录</string>
    <string name="no_sex">每日1点前、5-7点、11-13点、\n17-19点、23点后(子午卯酉)，\n元气在体内化合禁止交媾！</string>
    <string name="calendar">日历</string>
    <string name="birthday">生辰忌日</string>
    <string name="birthday_summary">双方至亲的生辰忌日</string>
    <string name="binput">输入名称，选择公历日期</string>
    <string name="yin">农:</string>
    <string name="yang">公:</string>
    <string name="format">"公历:yyyy年MM月dd日"</string>
    <string name="call">叫性</string>
    <string name="call_summary">早上起来真清净，\n大家一起来叫性。</string>
    <string name="timed">定时提醒</string>
    <string name="off">关闭</string>
    <string name="on">开启</string>
    <string name="s1">钟声</string>
    <string name="s2">耳光</string>
    <string name="n1">三次</string>
    <string name="n2">六次</string>
    <string name="n3">九次</string>
    <string name="dao">为人之道</string>
    <string name="d0">
        1、老人是一家的天德星， 以德为根。 “德”是担当一家的过， 和平一家的过。\n
        2、老人性如灰， 温和无火气， 少说话， 不唠叨， 不说家人长短， 带头缘起一定互相看好处， 还得要兜满家。\n
        3、福德具足、温和厚重叫做性如灰。\n
        4、知足常乐， 在家颐养天命。 宣扬家风， 赞叹祖德， 教育子孙懂得知恩、感恩、报恩。\n
        5、不要管闲事， 不要过多牵挂子孙， “儿孙自有儿孙福”。\n
        6、子女的事不要干涉， 放手让位给后辈来当家， 不摆老资格。\n
        7、家里有问题， 首先是老人行为有漏洞了。 一是不守本分， 二是过分。\n
        8、家里有问题， 老人应生惭愧心：是我老人没做好， 有缺德之处， 没把家人教育好。\n
        9、家里不管谁有错， 不管发生什么灾难和是非， 都不外扬家丑。\n
        10、不造是非， 不说是非， 不传是非， 不听是非， 要担当是非， 不怕是非。 调和一家不生是非， 不然老人就是缺德。\n
        11、一家是否发达， 子孙是否兴旺， 与堂上老人有无善根福德直接有关。 老人有德， 子孙兴旺； 老人缺德， 一家灾殃， 家道不兴， 香火衰败。\n
        12、老人如何使一家兴旺呢？就是要多行善事， 广积阴德。 一方面可修德免罪， 一方面为子孙培德扎根， 庇荫子孙。\n
        13、老人托起一家的福报， 创造一家的福德。 福德是一代比一代强， 福报是一代比一代兴旺发达； 子孙比你强， 说明你有德， 否则就是无德。\n
        14、老人如大地， 默默地承载一切， 包容一切， 化育一切。 老人胸怀宽大， 家庭福报就大。\n
        15、老人爱人爱物， 家庭子孙就兴旺。 如果老人贪了， 就将家庭的全部福报吃完了。\n
        16、老人有德是最好的风水， 最高等的风水。
    </string>
    <string name="d1">
        1、一家的天福星， 以志为根。 即以全家安乐为己任， 造福一家。\n
        2、上要尊老， 下要爱幼。 用感恩心去完善一切， 让家庭上下和睦。\n
        3、向子女宣扬老人、老祖宗的功德， 做尊老敬老的尽孝榜样给子女看， 用感恩先辈的恩德， 来启蒙后代。\n
        4、不安排老人做事， 他们喜欢什么就做点什么， 但要多关心老人， 常劝他们多休息。\n
        5、父母是人伦之始， 阴阳之道， 阴为母， 阳为父。 阴阳和， 才能万物生长， 阴阳不合， 精神痛苦， 情不投意不合， 即生育的子女， 性质一定不好， 或者儿女缺乏。\n
        6、父母是孩子的第一任老师， 家庭是孩子的第一所学校。\n
        7、小孩子是否健康与母亲关系很大， 有无智慧与父亲关系很大， 是否福德庄严就看父母是否经常以快乐的爱心去做事做人。\n
        8、子女不听话， 不孝顺， 首先要问自己是否也不孝顺老人， 是否有做不对的地方。 对上不认可父母（老人）的功德， 对下（子女）怎么教育都不到位。\n
        9、孩子不明理等于是果子酸了。 果子酸了要在树根上下功夫。\n
        10、不要怨恨子女， 更不能打骂子女， 因为子女的成败也与父母本身的心性德行有关， 第二要考虑到自己教育的方法是否有不当之处。\n
        11、教育孩子五步曲： 养、育、教、领、导， 但不许管。\n重点要培德， 把道德教育好。\n
        12、“管”是父母任着自己的性子， 找儿女的错处， 拂逆他的性子， 所以往往越管越管不好。 因为用脾气管儿女， 不但管不好， 反把儿女的脾气激起来， 碰起性来， 甚至父子成仇， 都是父母不明白道的缘故。\n
        13、孩子不用管， 全凭德行感化。 明白他的个性， 帮他砍小枝、留大枝。 不娇、不溺、不打、不骂。 多鼓励， 常肯定， 少批评， 不用物质诱惑。\n
        14、正人先正己， 父母要先化除为禀性， 涵养天性。 懂得先克己， 方能教化儿女。 不论儿女孝不孝， 但问自己慈不慈。\n
        15、小孩是自己的， 也是社会的， 是天地的。 小孩教不好， 小的影响自己家庭， 大的影响社会， 也有负天地之恩。 把孩子教育好， 责任重大。
    </string>
    <string name="d2">
        1、夫妻是一家的天吉星， 以爱为根。\n
        2、整个家庭的建立都是以爱为根， 没有爱无法建立的家庭， 爱是成家的第一条件。\n
        3、有缘爱一个人， 首先要了解对方的本分。 成全对方、完善本分。 启蒙对方发挥本分。 不管束对方的自由权， 应给予对方快乐， 不应给对方烦恼。 相互成全， 相互理解对方的生理和心理。\n
        4、爱的标准：真爱无私， 觉爱无架（价）， 博爱无条件， 实爱无成见。\n
        真爱无私：尊重对方， 不给对方添麻烦。\n
        觉爱无架（价）：不抬高身份， 不把爱当作买卖。 明白对方好处， 赞叹对方好处； 理解对方的难处， 原谅对方的过。 如对方有过， 能启蒙指导对方改过。\n
        博爱无条件：不管人， 不束缚对方。 给对方自由权。\n实爱无成见：真信不疑， 不要怀疑对方。\n
        能做到这些， 就会家和万事兴。\n
        5、爱是和谐的缘起， 也是和谐的总纲， 没有爱不可能建立和谐的家庭。\n
        6、夫妻结合有三因缘：\n
        第一， 是为了生活上互相照顾， 互相关心； \n
        第二， 是为了生儿育女， 传宗接代， 为世界留下一个好的人根； \n
        第三， 是为了更好地关心和照顾双方的父母， 让老人放心、欢喜。\n
        7、夫妻之间要做到相互补漏， 而不是互相埋怨。\n
        8、本来是丈夫的事情， 但是丈夫忘记做了， 妻子不要埋怨， 要认真把事情有做好； 反过来， 丈夫也要这样做。 对方做不到的自己补上去。 这就是互相补漏。\n
        9、成家后， 男人若不能把女人领到道上， 不能上孝公婆， 中悌兄弟姐妹， 下慈儿女， 就是自己十分尽孝， 老人也不放心。 女子婚后若不能助夫成德， 就是自己孝敬公婆， 老人也不安心。\n
        10、丈夫多照顾岳父岳母， 妻子多孝敬公公婆婆； 譬如给老人买东西， 应该是女婿亲自给岳父岳母， 媳妇亲自送给家公家婆。\n
        11、男女平等是指权力上平等， 享受上平等。 在本分上、礼节上绝对不能平等。\n
        12、男有男的本分， 女有女的本分， 阴阳各有其位。 男子以刚正为本； 女子以柔和为本。 “刚”是不动性（不发脾气）， “正”是合乎正理。 “柔”要性如水， “和”就要合乎理。 所以刚正就是柔和， 柔和就是刚正， 名词虽然不一样， 精神却是一样。\n
        13、夫妻闹矛盾， 一是违背天地赋予的恩； 二是违背父母赋予的情； 三是违背自己本命多生多劫本分的因缘。 违背生命本分的因缘， 生命就失去正报的依靠。 夫妻分裂， 就是生命的分裂。\n
        14、夫妻道， 也就是阴阳道， 夫义妇顺， 阴阳气顺， 互相不克， 不但不生病， 不夭亡。 还能家齐， 子孙昌旺。 所以， 男子要明女人的道， 女人要明男人的道， 家庭才能合乐。\n
        15、性（天性）合、心合、身合。 才是夫妻真正的和谐。\n
        16、志界夫妻是相互感恩， 绝不怨人。 意界夫妇是快乐的， 夫领妻成道， 妻助夫成德， 绝不生气。 心界夫妇是礼仪夫妇， 就会相互管辖啦！身界夫妇， 是打骂夫妇， 搅扰一生。
    </string>
    <string name="d3">
        1、男子汉大丈夫要说话算数， 一就是一， 二就是二， 说到做到。\n
        2、做不到就不要说， 说话不算数就没有尊严。\n
        3、男人属阳， 阳即无私。 无私就是表达对一家的爱。\n
        4、有私心就会暗中做违背良心的事， 令全家烦恼， 这种不是好男人。\n
        5、男人要“刚”。 刚不是打人骂人， 打人骂人的男人是无能的男人。\n
        6、“刚”是不但不打人骂人， 而且被骂也不回答、不反驳、不烦恼， 如如不动， 被骂也不动性（不发脾气）才是刚。 顺逆当头， 安然自在， 做到就是大丈夫。\n
        7、男人分有三夫：弱夫、暴夫、丈夫。\n
        8、弱夫也叫懦夫， 撑不起家庭。 唯唯诺诺， 说而不做， 不敢担当事情， 把女人推到前面， 专听女人指挥。\n
        9、暴夫则非打即骂， 不讲道理。 不明白自己责任所在， 所以才敢胡作非为。\n
        10、丈夫则勇于承担一家的责任， 以理服人， 一家人有过错反过来自己生惭愧心。\n
        11、为人丈夫， 要从“三纲”上定住位， 三纲是指性纲、心纲、身纲； 不动禀性（不发脾气）为性纲； 不起私欲为心纲； 没有不良嗜好为身纲。 生气是性纲倒； 骂人是心纲倒； 打人是身纲倒。 “纲”是领的意思， 必须要把女人领在道上， 上孝公婆， 中和妯娌， 下慈儿女。\n
        12、男人是一家的栋梁， 要能明理， 有志气， 领妻不管妻。\n
        13、如果男人做到位， 则家中少灾难； 如果男人做不到位， 则家中多灾多难。
    </string>
    <string name="d4">
        1、女人是国之母， 家之妇， 人之妻。\n
        2、女人要柔和， 安祥笑容， 和一家的人缘。\n
        3、如水一般随圆就方， 合五色调五味， 原质总是不变。 随遇而安， 随贫随富， 可高可低， 如水能养育万物， 又不与万物相争， 处在最低的地方， 低矮就下， 常认不是， 是为女人的本分。\n
        4、女人多事， 男人无声； 女人不柔， 家财不旺。\n
        5、不要刚暴， 不要急躁， 不要罗嗦多嘴， 更不要去管男人的事。 应助夫不累夫。\n
        6、为人妻， 自要先从“三从”上定住位， 才能助夫成德。 “三从”是指性从天理， 心从道理， 身从情理。 怎样才是“身从情理”？应做的事， 亲自去做。 上孝公婆， 中和妯娌， 下教儿女， 全都是自己的本分。 不怕苦， 不怕难。 做后也不生气、不埋怨、不后悔。 “心从道理”：指除去争贪搅扰的私心。 所思所想的都是如何报老人之恩？如何和睦妯娌， 如何教导儿女？心存全家的好处， 所行之事， 自然处处合道。 “性从天理”：以不动秉性为主， 还要化除禀性， 圆满天性， 方能厚德载物。\n
        7、女人有三妇：悍妇、弱妇、媳妇。\n
        8、女人刚暴， 管着男人， 精神上欺压男人， 说话像打雷一样， 非常强悍， 一手遮天， 叫悍妇。 这种家庭阴盛阳衰， 丈夫会未老先衰， 甚至夭亡， 生下来的小孩也不中用。\n
        9、女人什么事也不做， 全部依赖丈夫、依赖父母， 叫弱妇。\n
        10、女人好吃懒做， 怨天尤人是一家的扫把星， 悍妇和弱妇都不是媳妇。\n
        11、媳妇的意思是平息一家的不和， 做和睦一家的吉祥使者， 对人人平等、和气， 齐满一家的福气。\n
        12、媳妇当性如水， 性如水要知足常乐， 意为根， 托满家， 和颜悦色。 为一家的喜星， 上孝父母， 中和妯娌， 下慈儿女能助夫成德。 使丈夫无内顾之忧， 能报效社会， 立身行道， 扬名显亲。 不但治家如此， 即在社会工作， 也能恪守本分， 建功立业。 才能家道长久， 福禄长享。\n
        13、一个家庭是否安乐， 是否安静， 是否兴旺发达， 妻子的作用是非常重要的。 女人能做一个性如水的妻子， 定生贵子， 定能助夫成德， 家庭美满。
    </string>
    <string name="d5">
        1、家庭内的婆媳， 全是自外姓来的， 到同一个家里， 如同母女。\n
        2、道在恩义并用， 相处合道， 能侍奉终身。\n
        3、若不合道， 便婆媳不睦， 闹得家务不合分居另过， 家庭分崩拆离， 家道不兴。\n
        4、婆婆是当媳妇多年熬出来的， 等到娶了儿媳， 便当了婆婆。 媳妇是在家当姑娘， 一出阁到了婆婆家， 便当了媳妇。\n
        5、婆婆是早来的， 一切事务全都明白； 媳妇是晚来的， 一切事务全不明白。 婆婆就要把媳妇领到道上， 待媳妇如女儿， 不知道的告诉她， 指导她， 不得作难。\n
        6、本来媳妇就不是婆婆生的， 婆婆若不明白道， 未先施恩， 先扬短处， 或以大压小， 用脾气来管她， 说话净种恶因， 婆媳哪能发生好感情？\n
        7、每个家庭应设想到是自己的女儿嫁进这个家里， 家婆应疼爱儿媳妇如同疼爱自己的女儿。 如做不到， 儿媳会用同样方式去对待她以后的媳妇， 造成恶性循环。\n
        8、说话常提儿媳长处， 感激她娘家的教育。 儿媳如有过错， 婆婆赶快兜过来， 先宽容， 后在背后指教她， 千万不可与她吵闹， 媳妇自然会感恩、报恩。\n
        9、当媳妇的， 爱自己的丈夫必须要爱自己的公婆。 明白没有公婆就没有自已亲爱的丈夫。 体恤婆母以前的奔波劳碌， 费尽心力， 才把儿子养大成人。 不能再使婆母受累， 指使婆母做事， 或对婆母言行产生怨烦。\n
        10、做媳妇的应该把公婆当成自己的父母孝敬。 古人云：人生都有双重父母。 所以对双方父母都要一视同仁。\n
        11、婆母所爱之物， 我当爱之； 所爱之人， 我当敬之。 准能得婆母的欢喜心。 再能理解老人的心， 顺老人的意， 便是得了道。\n
        12、当媳妇的， 要明理：公婆是一家真正的福报。 不要老人， 怨恨老人， 不肯对老人尽孝等于自己不要福报， 也不会有福报。\n
        13、不孝公婆， 种下如此之因， 待儿女长大之后， 定也会受儿女不孝自己之果报。\n
        14、公婆如同一家之树根， 想要枝繁叶茂， 花香果甜， 定要善待树根， 往根上施肥、浇水、松土。\n
        15、家和万事兴， 要想夫贵子贤， 就要教敬公婆， 日子准能发达。 否则富贵花间露， 荣华草头霜， 皆不能长久。
    </string>
    <string name="d6">
        1、子女是一家的天贵星， 以孝为根。\n
        2、为人子女， 年幼时很难在生计上帮助父母， 最重要的是少让父母担忧， 不让父母担忧是最大报恩。 长至成年要尽心尽力孝父母之身， 之心， 之志。\n
        3、作为子女， 应以尽孝为己任， 能承祖业， 弘扬家风， 立志超过前辈。\n
        4、给老人物质的满足， 那是一种义务， 还不算孝， “孝”是完善自己的本分， 给父母放心， 不给父母添麻烦， 才是真孝顺。\n
        5、“顺”即接受父母的言教， 让父母安乐， 放心。 即使父母明显是错的， 也不当面顶撞。 父母有过， 不但不埋怨父母， 还把父母该做的事情也完善起来， 这叫做为父母补漏。\n
        6、父母有过， 子女能为他们补漏， 才真正是一家的天贵星。 若一味顺从， 难免陷亲于不义， 也不算真孝。\n
        7、我们的生命降临在这一家， 等于是和这一家的生命有缘， 好， 是你命中的福报； 坏， 也是自己的缘分。 有痛苦有烦恼是这一家在成就你， 磨练你， 成全你了结自己的果报， 同样要感恩报恩。\n
        8、不管父母慈不慈， 但问自己孝不孝。\n
        9、想尽孝， 要从性， 心， 身三界入手。 性不化不能孝性， 心不诚不能孝心， 身不修不能孝身， 想要真尽孝， 必须清三界。\n
        10、孝身， 要在父母衣食住行上留心， 养父母之身。 孝心要处处顺父母的心， 父母所爱何物， 我必爱之。 所近何事， 我当奉行之， 所亲何人， 我当敬之。 孝性务要使老人天性和乐， 面无愁容， 不使老人动性， 含饴弄孙， 以乐天年。\n
        11、孝分有理孝， 事孝， 身孝。 理孝就是要尊重老人； 事孝就是我们尽己所能为父母提供物质方面的需要； 身孝就是我们要完善自身本分， 不让父母担忧。\n
        12、给父母吃穿是孝身； 让父母顺心是孝心； 心存父母之志， 使父母安心， 快乐， 不令父母操心， 这是孝性。\n
        14、子女孝顺父母自然长寿。 父母长寿子女不孝， 那就是给父母一生带来很大的烦恼， 这样的子女成了败家星了。\n
        13、子女不孝， 就不会有福报。\n
        15、老人在世能令其安心， 快乐， 为尽孝； 老人临终能令其安详含笑而去， 算是尽孝尽到头了。
    </string>
    <string name="d7">
        1、兄弟姐妹是一家的天辅星， 以义为根。\n
        2、“义”就是无条件的帮助， 不惜一切代价。 一人有难， 其他人要到位帮助， 条件好的应该尽量帮助条件差的。\n
        3、若同室操戈， 同根相煎， 会令祖上蒙灰， 而且自己势单力薄孤立无援。 若兄弟姐妹间不能相亲相爱， 父母一定忧心， 孝道仍不能圆满。 所以孝敬父母就得和睦兄弟姐妹。\n
        4、兄弟姐妹情同手足， 要做到相互尊重， 互相同情， 互相帮助， 互相补漏。\n
        5、得到兄弟姐妹的帮助要懂得知恩， 报恩， 感恩。\n
        6、兄长是半个家长， 要以身作则， 助父立业， 协助父母完善一切， 要承父母志， 继祖先德。\n
        7、兄长对弟妹要像父母一样有爱心。\n
        8、当弟妹的应该把自己的兄长当作长辈， 兄长做不到位的要为他补上。\n
        9、不传是非闲话， 不怨兄长父母。\n
        10、活泼节俭， 受命不辞， 义所当为则尽力而为。\n
        11、发心学习全家的德行， 把优良家风发扬光大。 做得到， 一家就兴旺。\n
        12、成家后， 要互相竞比家风， 一家比一家做得好。\n
        13、兄弟姐妹之间不要为家产而你争我夺， 也不要因为娶新妇后伤兄弟情谊。 兄弟之道就是悌字， 悌道不尽， 累及孝道。 伤手足天伦之至情， 便是逆天， 将来定受天罚。
    </string>
</resources>