<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/setting">
    <Preference
        android:title="@string/ver"
        android:key="ver" />
    <ListPreference
        android:title="@string/last"
        android:entryValues="@array/last"
        android:entries="@array/last"
        android:defaultValue="5"
        android:key="last"
        android:summary="@string/last_summary" />
    <ListPreference
        android:title="@string/play"
        android:entryValues="@array/play"
        android:defaultValue="10"
        android:entries="@array/play"
        android:key="play"
        android:summary="@string/play_summary" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="sound"
        android:summary="@string/sound_summary"
        android:switchTextOff="@string/sound_off"
        android:switchTextOn="@string/sound_on"
        android:title="@string/sound_title" />
</PreferenceScreen>