<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="3">

        <ImageButton
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/five"
            android:src="@drawable/ic_five" />

        <ImageButton
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_yi"
            android:id="@+id/yi" />

        <ImageButton
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_zhi"
            android:id="@+id/zhi" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:text="@string/five"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:text="@string/yi"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:text="@string/zhi"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="3">

        <ImageButton
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/type_three"
            android:src="@drawable/type_three" />

        <ImageButton
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/type_five"
            android:src="@drawable/type_five" />

        <ImageButton
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/type_four"
            android:src="@drawable/type_four" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:text="@string/threeType"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:text="@string/fiveType"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:text="@string/fourType"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />
    </TableRow>
</TableLayout>
